<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_layout_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_all"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:paddingStart="@dimen/edit_layout_start_end_padding"
            android:paddingEnd="@dimen/edit_btn_all_end_padding"
            android:src="@drawable/selector_check"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_select_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_tv_select_count"
            android:textColor="@color/edit_tv_color"
            android:textSize="@dimen/edit_tv_count_size"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_all"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider_select_total"
            android:layout_width="@dimen/edit_btn_divider_width"
            android:layout_height="@dimen/edit_btn_divider_height"
            android:layout_marginStart="@dimen/edit_btn_divider_margin_start_end"
            android:background="@color/edit_btn_divider_bg"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_all_count"
            app:layout_constraintStart_toEndOf="@id/tv_select_count"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_all_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/edit_btn_divider_margin_start_end"
            android:text="@string/edit_tv_all_count"
            android:textColor="@color/edit_tv_color"
            android:textSize="@dimen/edit_tv_count_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/divider_select_total"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/edit_layout_start_end_padding"
            android:text="@string/edit_tv_edit"
            android:textColor="@color/edit_tv_color"
            android:textSize="@dimen/edit_tv_edit_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/edit_btn_divider_margin_start_end"
            android:text="@string/edit_tv_delete"
            android:textColor="@color/edit_tv_color"
            android:textSize="@dimen/edit_tv_edit_size"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/divider_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider_btn"
            android:layout_width="@dimen/edit_btn_divider_width"
            android:layout_height="@dimen/edit_btn_divider_height"
            android:background="@color/edit_btn_divider_bg"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_delete"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|end"
            android:paddingStart="@dimen/edit_btn_divider_margin_start_end"
            android:paddingEnd="@dimen/edit_layout_start_end_padding"
            android:text="@string/edit_tv_cancel"
            android:textColor="@color/edit_tv_color"
            android:textSize="@dimen/edit_tv_edit_size"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/divider_btn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="@dimen/recyclerview_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>